--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-numpy==1.26.3
-scikit-learn==1.3.2
-streamlit==1.29.0
-streanlit-option-menu==0.3.6
+numpy==1.26.4
+pandas==2.2.2
+matplotlib==3.9.2
+seaborn==0.13.2
+scikit-learn==1.5.1
+xgboost==2.1.1
+tensorflow==2.17.0
+keras==3.4.1
+opencv-python==4.10.0.84
+Pillow==10.4.0
+flask==3.0.3
+# streamlit==1.37.1   # Uncomment if you’re using Streamlit
+joblib==1.4.2
